# QDigibib

./: .gitignore  CMakeLists.txt  Doxyfile
src/: CMakeLists.txt
src/libqdigibib/: CMakeLists.txt  DBLibrary.cpp  DBLibrary.h  DBLibraryHelper.cpp  DBLibraryHelper.h  DBVolume.cpp  DBVolume.h
src/qdigibib/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  main.cpp
src/qdigibib/settingsPages/: LibraryLocationSetting.cpp  LibraryLocationSetting.h  LibraryLocationSetting.ui  SettingsPageInterface.h
